--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,45 @@
 		<version>2.6.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	
 	<groupId>com.bizlogic</groupId>
 	<artifactId>bizlogic-java-tools</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.2-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	
 	<name>bizlogic-java-tools</name>
-	<description>Demo project for Spring Boot</description>
+	<description>BizLogic Java Tools</description>
+	
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+
+	<developers>
+		<developer>
+			<name>Oscar Univio</name>
+			<email>oscar.univio@bizlogic.net</email>
+			<organization>com.github.oscarunivio</organization>
+			<organizationUrl>https://github.com/bizlogicnet/bizlogic-java-tools</organizationUrl>
+		</developer>
+	</developers>
+
+	<scm>
+		<connection>scm:git:git://github.com/bizlogicnet/bizlogic-java-tools.git</connection>
+		<developerConnection>scm:git:https://github.com/bizlogicnet/bizlogic-java-tools.git
+		</developerConnection>
+		<url>https://github.com/bizlogicnet/bizlogic-java-tools.git</url>
+		<tag>bizlogic-java-tools</tag>
+	</scm>
+	
+
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub BizLogic Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/bizlogicnet/bizlogic-java-tools</url>
+		</repository>
+	</distributionManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -62,6 +93,23 @@
 	</dependencies>
 
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-plugin-plugin</artifactId>
+						<version>3.6.0</version>
+						<configuration>
+								<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+						</configuration>
+				</plugin>
+				<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-site-plugin</artifactId>
+						<version>3.9.1</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -75,10 +123,21 @@
 					</excludes>
 				</configuration>
 			</plugin>
+				<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.8.1</version>
+						<configuration>
+								<source>8</source>
+								<target>8</target>
+						</configuration>
+				</plugin>
+				<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-release-plugin</artifactId>
+						<version>3.0.0-M1</version>
+				</plugin>
 		</plugins>
-		<finalName>
-			spring-bizlogic-java-tools
-		</finalName>
 	</build>
 
 </project>
